# name: TestEvents.test_event_property_values
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%qw%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%QW%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%6%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.4
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND (event = 'random event')
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%6%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.5
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND (event = 'foo'
         OR event = 'random event')
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%6%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.6
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND (event = '404_i_dont_exist')
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%qw%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND notEmpty("mat_random_prop")
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND notEmpty("mat_random_prop")
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND "mat_random_prop" ILIKE '%qw%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND notEmpty("mat_random_prop")
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND "mat_random_prop" ILIKE '%QW%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND notEmpty("mat_random_prop")
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND "mat_random_prop" ILIKE '%6%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.4
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND notEmpty("mat_random_prop")
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND (event = 'random event')
    AND "mat_random_prop" ILIKE '%6%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.5
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND notEmpty("mat_random_prop")
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND (event = 'foo'
         OR event = 'random event')
    AND "mat_random_prop" ILIKE '%6%'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.6
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND notEmpty("mat_random_prop")
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
    AND (event = '404_i_dont_exist')
    AND "mat_random_prop" ILIKE '%qw%'
  LIMIT 10
  '
---
# name: TestEvents.test_filter_events
  '
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'some-other-one'
         AND "posthog_persondistinctid"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestEvents.test_filter_events.1
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestEvents.test_filter_events.2
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events.3
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events.4
  '
  SELECT "ee_license"."id",
         "ee_license"."created_at",
         "ee_license"."plan",
         "ee_license"."valid_until",
         "ee_license"."key",
         "ee_license"."max_users"
  FROM "ee_license"
  WHERE "ee_license"."valid_until" >= '2023-01-26T23:47:08.637168+00:00'::timestamptz /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events.5
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events.6
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events.7
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events.8
  '
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('2')
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2) /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events.9
  '
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE "posthog_persondistinctid"."person_id" IN (1,
                                                   2,
                                                   3,
                                                   4,
                                                   5 /* ... */) /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_event_name
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestEvents.test_filter_events_by_event_name.1
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_event_name.2
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_event_name.3
  '
  SELECT "ee_license"."id",
         "ee_license"."created_at",
         "ee_license"."plan",
         "ee_license"."valid_until",
         "ee_license"."key",
         "ee_license"."max_users"
  FROM "ee_license"
  WHERE "ee_license"."valid_until" >= '2023-01-26T23:47:09.630100+00:00'::timestamptz /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_event_name.4
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_event_name.5
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_event_name.6
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_event_name.7
  '
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('2')
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2) /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_event_name.8
  '
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE "posthog_persondistinctid"."person_id" IN (1,
                                                   2,
                                                   3,
                                                   4,
                                                   5 /* ... */) /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestEvents.test_filter_events_by_properties.1
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.10
  '
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE "posthog_persondistinctid"."person_id" IN (1,
                                                   2,
                                                   3,
                                                   4,
                                                   5 /* ... */) /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.11
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestEvents.test_filter_events_by_properties.12
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.13
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.2
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.3
  '
  SELECT "ee_license"."id",
         "ee_license"."created_at",
         "ee_license"."plan",
         "ee_license"."valid_until",
         "ee_license"."key",
         "ee_license"."max_users"
  FROM "ee_license"
  WHERE "ee_license"."valid_until" >= '2023-01-26T23:47:10.529610+00:00'::timestamptz /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.4
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.5
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.6
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:PERSON_ON_EVENTS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.7
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.8
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:MATERIALIZED_COLUMNS_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_filter_events_by_properties.9
  '
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('2')
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2) /*controller='project_events-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/events/%3F%24'*/
  '
---
# name: TestEvents.test_hogql_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.4
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.5
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.6
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.7
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.4
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.5
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.6
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals("mat_key", 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.7
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals("mat_key", 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(uuid, event, properties, timestamp, team_id, distinct_id, elements_chain, created_at, person_id, person_created_at, person_properties),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(uuid, event, properties, timestamp, team_id, distinct_id, elements_chain, created_at, person_id, person_created_at, person_properties),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.4
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  GROUP BY event
  ORDER BY count(*) DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.5
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  GROUP BY event
  ORDER BY count(*) DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.6
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND or(equals(event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), '%val2'))
  GROUP BY event
  ORDER BY count(*) DESC, event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.7
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND or(equals(event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), '%val2'))
  GROUP BY event
  ORDER BY count(*) DESC, event ASC
  LIMIT 101
  '
---
